# aero.io

./: CMakeLists.txt  INSTALL.md  Info.plist.in  build.sh
src/: aboutdialog.cpp  aboutdialog.h  flightconditions.cpp  flightconditions.h  locationservice.cpp  locationservice.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  weatherservice.cpp  weatherservice.h
src/widgets/: airportpresetwidget.cpp  airportpresetwidget.h  flightplanwidget.cpp  flightplanwidget.h  radarwidget.cpp  radarwidget.h  weatherwidget.cpp  weatherwidget.h  windwidget.cpp  windwidget.h
